adds changes made for tools for tech talk

--- a/scripts/dataset_plots.ipynb
+++ b/scripts/dataset_plots.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SymmetricNoisyRegressor, BWRun\n",
-    "import adaptive_latents.input_sources.functional as fin\n",
+    "import adaptive_latents.input_sources.utils as fin\n",
     "from scipy.io import loadmat\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -241,7 +241,7 @@
     "\n",
     "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
     "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
-    "reg = al.regressions.HistoricalSNR(input_d=bw.N, output_d=out_ds.output_shape, init_min_ratio=.5)\n",
+    "reg = al.regressions.SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape, init_min_ratio=.5)\n",
     "\n",
     "class CustomAnimation(AnimationManager):\n",
     "    n_rows = 1\n",
@@ -278,18 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.argmax(br.alpha_history[0][-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "historical_observations, _ = br.obs_ds.get_history()\n",
-    "n_steps = 30\n",
+    "n_steps = 15\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(historical_observations[:,0], historical_observations[:,1], '.')\n",
@@ -301,13 +291,14 @@
     "    ms.append(m)\n",
     "\n",
     "for m in set(ms):    \n",
+    "    pass\n",
     "    al.plotting_functions.add_2d_bubble(ax, br.bw.L[m], br.bw.mu[m], 3, alpha=.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +319,7 @@
     "\n",
     "b = make_interp_spline(t,points)\n",
     "\n",
-    "points = b(np.linspace(0,1,100))\n",
+    "points = b(np.linspace(0,1,n_steps))\n",
     "ax.plot(points[:,0],points[:,1])\n",
     "\n",
     "ms = []\n",
@@ -348,14 +339,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from scipy.interpolate import BSpline, make_interp_spline\n",
     "historical_observations, _ = br.obs_ds.get_history()\n",
-    "n_steps = 25\n",
+    "n_steps = 15\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "all_observations = br.obs_ds.a\n",
@@ -369,7 +360,7 @@
     "\n",
     "b = make_interp_spline(t,points)\n",
     "\n",
-    "points = b(np.linspace(0,1,n_steps*5))\n",
+    "points = b(np.linspace(0,1,n_steps*1))\n",
     "ax.plot(points[:,0],points[:,1])\n",
     "\n",
     "for i in range(n_steps):\n",
@@ -383,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "### Some sort of continuity measure?"
@@ -524,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
