--- a/scripts/svd.ipynb
+++ b/scripts/svd.ipynb
@@ -82,11 +82,14 @@
    "outputs": [],
    "source": [
     "def general_incremental_svd(A_sequence, make_G_matrices=trivial_make_G, max_k=10):\n",
+    "    history = []\n",
+    "    \n",
     "    A =  A_sequence[0]\n",
     "    l = A.shape[1]\n",
     "    Q, B = np.linalg.qr(A)\n",
     "    W = np.eye(l)\n",
     "    k = l\n",
+    "    history.append(dict(Q=Q, B=B, W=W))\n",
     "    \n",
     "    for A in A_sequence[1:]:\n",
     "        l = A.shape[1]\n",
@@ -95,24 +98,26 @@
     "        A_orth = A - Q @ B_in\n",
     "        Q_orth, B_orth = np.linalg.qr(A_orth)\n",
     "        \n",
-    "        Q = np.hstack([Q, Q_orth]) # Q hat\n",
+    "        Q_bigger = np.hstack([Q, Q_orth]) # Q hat\n",
     "        zero_block = np.zeros((B_orth.shape[0],B.shape[1]))\n",
-    "        B =  np.block([\n",
+    "        B_bigger =  np.block([\n",
     "            [B,          B_in],\n",
     "            [zero_block, B_orth]\n",
     "        ])\n",
     "        W = block_diag(W, np.eye(l))\n",
     "        \n",
-    "        G_u, G_v = make_G_matrices(B, max_k)\n",
+    "        G_u, G_v = make_G_matrices(B_bigger, max_k)\n",
     "\n",
     "        k = min(k + l, max_k)\n",
     "        G_u, G_v = G_u[:,:k], G_v[:,:k]\n",
     "        \n",
-    "        B = G_u.T @ B @ G_v\n",
-    "        Q = Q @ G_u\n",
+    "        B = G_u.T @ B_bigger @ G_v\n",
+    "        Q = Q_bigger @ G_u\n",
     "        W = W @ G_v\n",
+    "\n",
+    "        history.append(dict(Q=Q, B=B, W=W, B_bigger=B_bigger, Q_bigger=Q_bigger))\n",
     "        \n",
-    "    return Q, B, W"
+    "    return Q, B, W, history"
    ]
   },
   {
@@ -122,8 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_sequence = [rng.normal(size=(2,1)) + np.array([3,3]) for _ in range(10)]\n",
-    "Q, B, W = general_incremental_svd(A_sequence, max_k=1)"
+    "A_sequence = [rng.normal(size=(2,1)) for _ in range(10)]\n",
+    "A_full = np.column_stack(A_sequence)\n",
+    "\n",
+    "for f in [trivial_make_G, prosvd_make_G]:\n",
+    "    Q, B, W, _ = general_incremental_svd(A_sequence, f)\n",
+    "    assert np.allclose(Q @ B @ W.T, A_full)"
    ]
   },
   {
@@ -133,46 +142,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q @ B @ W.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A_sequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A_sequence = [rng.normal(size=(2,1)) for _ in range(10)]\n",
-    "A_full = np.column_stack(A_sequence)\n",
-    "\n",
-    "for f in [trivial_make_G, prosvd_make_G]:\n",
-    "    Q, B, W = general_incremental_svd(A_sequence, f)\n",
-    "    assert np.allclose(Q @ B @ W.T, A_full)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "A_sequence = [rng.normal(size=(3,4)) for _ in range(10)]\n",
     "A_full = np.column_stack(A_sequence)\n",
     "\n",
     "d=4\n",
-    "Q, B, W = general_incremental_svd(A_sequence, prosvd_make_G, max_k=d)\n",
+    "Q, B, W, _ = general_incremental_svd(A_sequence, prosvd_make_G, max_k=d)\n",
     "\n",
     "\n",
     "\n",
@@ -189,7 +163,195 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{bmatrix}A_{t-1} & a_t\\end{bmatrix} = U_t \\Sigma_t V_t^\\top\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "direction = np.array([-3,1])\n",
+    "direction = direction/ np.linalg.norm(direction)\n",
+    "cov = np.column_stack([direction, [-direction[1], direction[0]]])\n",
+    "cov = cov @ np.diag([5,.11]) * .25 @ cov.T\n",
+    "\n",
+    "rng = np.random.default_rng(24)\n",
+    "A_sequence = [rng.multivariate_normal(mean=[2,2], cov=cov)[:,None] for _ in range(15)]\n",
+    "A_sequence.pop(2)\n",
+    "A_sequence[1] -= np.array([[.1],[.1]])\n",
+    "A_full = np.column_stack(A_sequence)\n",
+    "\n",
+    "Q, B, W, history = general_incremental_svd(A_sequence, max_k=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(ncols=2, figsize=(9,4))\n",
+    "ax[0].plot(*A_full, '.')\n",
+    "ax[0].axis('scaled')\n",
+    "ax[0].set_xlim([-4,4])\n",
+    "ax[0].set_ylim([-4,4])\n",
+    "ax[0].plot(0,0, '.k')\n",
+    "\n",
+    "ax[1].imshow(A_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-history[1][\"B_bigger\"], -history[1][\"Q_bigger\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=4, nrows=5, squeeze=False, layout='tight', figsize=(10,10))\n",
+    "\n",
+    "i = 0\n",
+    "for j in range(2):\n",
+    "    axs[i,j].plot(A_full[0,:i], A_full[1,:i], '.', color=\"C0\", alpha=.5)\n",
+    "    axs[i,j].plot(A_full[0,i], A_full[1,i], '.', color=\"C0\")\n",
+    "axs[i,1].axline((0,0), history[i]['Q'][:,0], color='k', alpha=.5)\n",
+    "\n",
+    "axs[i,1].plot([0, history[i]['Q'][0,0] * history[i]['B'][0,0]], [0,history[i]['Q'][1,0] * history[i]['B'][0,0]], color='C3')\n",
+    "\n",
+    "t = np.linspace(0,2*np.pi, 50)\n",
+    "\n",
+    "for i in range(1, axs.shape[0]):\n",
+    "    current_point = A_full[:,i:i+1]\n",
+    "    old_Q = history[i-1]['Q']\n",
+    "    weighted_col_space = history[i]['Q_bigger'] @ history[i]['B_bigger']\n",
+    "    for j in range(axs.shape[1]):\n",
+    "        axs[i,j].plot(A_full[0,:i], A_full[1,:i], '.', color=\"C0\", alpha=.5)\n",
+    "        axs[i,j].plot(current_point[0], current_point[1], '.', color=\"C0\")\n",
+    "        axs[i,j].axline((0,0), old_Q[:,0], color='k', alpha=.25)\n",
+    "        \n",
+    "\n",
+    "    along = old_Q * (old_Q.T @ current_point)\n",
+    "    direction_of_along = np.sign(old_Q.T @ current_point)\n",
+    "    residual = current_point - along\n",
+    "    axs[i,1].plot([0, along[0,0]], [0,along[1,0]], color='C1')\n",
+    "    axs[i,1].plot([along[0,0], (along+residual)[0,0] ], [along[1,0], (along+residual)[1,0]], color='C2')\n",
+    "\n",
+    "    circle_points = np.column_stack([np.cos(t), np.sin(t)])\n",
+    "    ellipse_points = weighted_col_space @ circle_points.T\n",
+    "    axs[i,2].plot(ellipse_points[0,:], ellipse_points[1,:])\n",
+    "\n",
+    "    saved_variance_vector = np.abs(history[i]['B_bigger'][0,0]) * -direction_of_along * old_Q\n",
+    "    axs[i,2].plot([0, saved_variance_vector[0,0] ], [0, saved_variance_vector[1,0]], color='C3')\n",
+    "    axs[i,2].plot([0, along[0,0]], [0,along[1,0]], color='C1')\n",
+    "    axs[i,2].plot([0, residual[0,0] ], [0, residual[1,0]], color='C2')\n",
+    "\n",
+    "    axs[i,-1].plot(ellipse_points[0,:], ellipse_points[1,:])\n",
+    "    axs[i,-1].axline((0,0), history[i]['Q'][:,0], color='k', alpha=.5)\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.plot(0,0, '.k')\n",
+    "    \n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "    \n",
+    "    ax.axis('scaled')\n",
+    "    ax.set_xlim([-4,4])\n",
+    "    ax.set_ylim([-4,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.linalg.norm(np.diff(np.squeeze([h['Q'] for h in history]), axis=0), axis=1));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tex_for_history(history, step):\n",
+    "    Q_old = history[step-1][\"Q\"]\n",
+    "    R_old = history[step-1][\"B\"]\n",
+    "    Q_bigger = history[step][\"Q_bigger\"]\n",
+    "    R_bigger = history[step][\"B_bigger\"]\n",
+    "    Q = history[step][\"Q\"]\n",
+    "    R = history[step][\"B\"]\n",
+    "    s = fr\"\"\"\\begin{{align*}}\n",
+    "    Q_{{{step-1}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q_old[0,0]:.2f} }}}} \\\\\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q_old[1,0]:.2f} }}}} \\\\\n",
+    "    \\end{{bmatrix}}\n",
+    "    \\quad&\n",
+    "    R_{{{step-1}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{C3}}{{ {R_old[0,0]:.2f} }}}}\n",
+    "    \\end{{bmatrix}}\n",
+    "    \\\\\n",
+    "    \\hat Q_{{{step}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q_bigger[0,0]:.2f}  }}}} & \\mathtt{{\\mathcolor{{kk}}{{ {Q_bigger[0,1]:.2f} }}}} \\\\\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q_bigger[1,0]:.2f} }}}} & \\mathtt{{\\mathcolor{{kk}}{{ {Q_bigger[1,1]:.2f} }}}} \\\\\n",
+    "    \\end{{bmatrix}}\n",
+    "    \\quad& \n",
+    "    \\hat R_{{{step}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{C3}}{{ {R_bigger[0,0]:.2f}  }}}} & \\mathtt{{\\mathcolor{{C1}}{{ {R_bigger[0,1]:.2f} }}}} \\\\\n",
+    "        \\mathtt{{\\mathcolor{{kk}}{{0}}}} & \\mathtt{{\\mathcolor{{C2}}{{ {R_bigger[1,1]:.2f} }}}} \\\\\n",
+    "    \\end{{bmatrix}}\n",
+    "    \\\\\n",
+    "    Q_{{{step}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q[0,0]:.2f}  }}}} \\\\\n",
+    "        \\mathtt{{\\mathcolor{{gray}}{{ {Q[1,0]:.2f} }}}} \\\\\n",
+    "    \\end{{bmatrix}}\n",
+    "    \\quad& \n",
+    "    R_{{{step}}} =\n",
+    "    \\begin{{bmatrix}}\n",
+    "        \\mathtt{{\\mathcolor{{C3}}{{ {R[0,0]:.2f}  }}}}\n",
+    "    \\end{{bmatrix}}\n",
+    "\\end{{align*}}\n",
+    "\"\"\"\n",
+    "    return s\n",
+    "print(tex_for_history(history, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
    "metadata": {},
    "source": [
     "# Biased proSVD"
@@ -198,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "24",
    "metadata": {},
    "source": [
     "# real data"
@@ -387,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Procrustes"
@@ -553,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "38",
    "metadata": {
     "tags": []
    },
@@ -565,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "39",
    "metadata": {
     "tags": []
    },
@@ -578,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "40",
    "metadata": {
     "tags": []
    },
@@ -610,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "41",
    "metadata": {
     "tags": []
    },
@@ -624,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "42",
    "metadata": {
     "tags": []
    },
