--- a/scripts/debug jax/switch_runtimes.ipynb
+++ b/scripts/debug jax/switch_runtimes.ipynb
@@ -167,12 +167,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "fig, axs = plt.subplots(nrows=3, layout=\"tight\", figsize=(10,5), sharex=True)\n",
     "\n",
     "bubble = 5\n",
     "axs[0].plot(br.L_diag_grad_history[:, bubble, :])\n",
-    "axs[0].set_ylim(np.array([-1,1])*20000)\n",
+    "axs[0].set_ylim(np.array([-1,1])*200)\n",
     "\n",
     "axs[1].plot(br.L_diag_v_history[:, bubble, :])\n",
     "axs[1].set_ylim(np.array([-1,1])*.01 + 0.005)\n",
@@ -193,13 +193,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "br.L_diag_grad_history[switch_iteration - brs[0,0].bw.M -10, bubble, :]"
+    "%matplotlib qt\n",
+    "fig, axs = plt.subplots(nrows=3, layout=\"tight\", figsize=(10,5), sharex=True)\n",
+    "\n",
+    "bubble = 5\n",
+    "axs[0].plot(br.L_diag_grad_history[:, bubble, :])\n",
+    "axs[0].set_ylim(np.array([-1,1])*200)\n",
+    "\n",
+    "axs[1].plot(br.L_diag_v_history[:, bubble, :])\n",
+    "axs[1].set_ylim(np.array([-1,1])*.01 + 0.005)\n",
+    "\n",
+    "\n",
+    "axs[2].plot(br.L_diag_m_history[:, bubble, :])\n",
+    "axs[2].set_ylim(np.array([-1,1])*1)\n",
+    "\n",
+    "\n",
+    "for i in range(3):\n",
+    "    axs[i].axvline(switch_iteration - brs[0,0].bw.M, color='k')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br.L_diag_grad_history[switch_iteration - brs[0,0].bw.M -10, bubble, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
