--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\""
+    "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\""
    ]
   },
   {
@@ -54,7 +54,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import adaptive_latents.input_sources.functional as fin\n",
+    "import adaptive_latents.input_sources.utils as fin\n",
     "import tqdm as tqdm\n",
     "from adaptive_latents import NumpyTimedDataSource\n",
     "import adaptive_latents.plotting_functions as bpf\n",
@@ -261,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_buzaki_data(base=adaptive_latents.input_sources.datasets.individual_identifiers[\"buzaki\"][0], bin_size=0.03)"
+    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_buzaki_data(individual_identifier=adaptive_latents.input_sources.datasets.individual_identifiers[\"buzaki\"][0], bin_width=0.03)\n"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resampled_behavior = fin.resample_behavior(raw_behavior, bin_centers, beh_t)\n",
+    "resampled_behavior = fin.resample_timeseries(raw_behavior, bin_centers, beh_t)\n",
     "hd = np.arctan2(resampled_behavior[:,0] - resampled_behavior[:,2], resampled_behavior[:,1] - resampled_behavior[:,3])\n",
     "beh = resampled_behavior[:,:2]"
    ]
@@ -299,8 +299,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(100,10), layout='tight')\n",
+    "plt.imshow(obs[:700].T, interpolation='none')\n",
+    "plt.yticks(range(obs.shape[1]), labels=[])\n",
+    "plt.xticks([])\n",
+    "plt.savefig(\"/home/jgould/Dropbox (University of Michigan)/long.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18",
    "metadata": {
     "tags": []
    },
@@ -311,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {
     "tags": []
    },
@@ -326,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,24 +368,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {
     "tags": []
    },
    "source": [
     "## Musal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ca, vid, t_ca, t_vid = adaptive_latents.input_sources.datasets.generate_musal_dataset(cam=1, video_target_dim=6, resize_factor=1, prosvd_init_size=100)"
    ]
   },
   {
@@ -383,13 +385,25 @@
    },
    "outputs": [],
    "source": [
-    "resampled_vid = fin.resample_behavior(vid, t_ca, t_vid)"
+    "ca, vid, t_ca, t_vid = adaptive_latents.input_sources.datasets.generate_musal_dataset(cam=1, video_target_dim=6, resize_factor=1, prosvd_init_size=100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "24",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "resampled_vid = fin.resample_behavior(vid, t_ca, t_vid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "26",
    "metadata": {
     "tags": []
    },
@@ -416,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {
     "tags": []
    },
@@ -429,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {
     "tags": []
    },
@@ -447,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "# Run Stuff"
@@ -455,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "30",
    "metadata": {
     "tags": []
    },
@@ -467,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:44.511511Z",
@@ -508,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "32",
    "metadata": {
     "tags": []
    },
@@ -520,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:08.250368Z",
@@ -542,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:10.383900Z",
@@ -562,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "source": [
     "## Run Table"
@@ -571,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:14.658506Z",
@@ -619,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {
     "tags": []
    },
@@ -656,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,24 +709,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "39",
    "metadata": {
     "tags": []
    },
    "source": [
     "## Table summary for Sheets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "row_to_break_out = \"s(obs,4)\""
    ]
   },
   {
@@ -724,13 +726,25 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(brs).T"
+    "row_to_break_out = \"s(obs,4)\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "41",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(brs).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
    "metadata": {
     "tags": []
    },
@@ -749,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {
     "tags": []
    },
@@ -764,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "44",
    "metadata": {
     "tags": []
    },
@@ -777,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
    "metadata": {
     "tags": []
    },
@@ -789,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "46",
    "metadata": {
     "tags": []
    },
@@ -807,22 +821,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "source": [
     "## Optimizing parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "datasets.keys() # this is so I have the text of the keys ready to copy-paste"
    ]
   },
   {
@@ -834,13 +836,25 @@
    },
    "outputs": [],
    "source": [
-    "brs2 = [] # this is a history of bubblewrap runs; reset it when the plots are getting too full"
+    "datasets.keys() # this is so I have the text of the keys ready to copy-paste"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "49",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "brs2 = [] # this is a history of bubblewrap runs; reset it when the plots are getting too full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "51",
    "metadata": {
     "tags": []
    },
@@ -875,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -886,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -898,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -911,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {
     "tags": []
    },
@@ -933,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {
     "tags": []
    },
@@ -945,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {
     "tags": []
    },
@@ -967,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {
     "tags": []
    },
@@ -983,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {
     "tags": []
    },
@@ -1000,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {
     "tags": []
    },
