--- a/scripts/debug jax/run_example.ipynb
+++ b/scripts/debug jax/run_example.ipynb
@@ -22,26 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.default_rng(0).normal(size=(5,5))"
+    "# run the same script, using cpu and gpu\n",
+    "# subprocess.call([\"python\", \"run_example.py\", \"gpu\"])\n",
+    "# subprocess.call([\"python\", \"run_example.py\", \"cpu\"])\n",
+    "# backends = [\"gpu\", \"cpu\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run the same script, using cpu and gpu\n",
-    "subprocess.call([\"python\", \"run_example.py\", \"gpu\"])\n",
-    "subprocess.call([\"python\", \"run_example.py\", \"cpu\"])\n",
-    "backends = [\"gpu\", \"cpu\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "source": [
     "## alpha"
@@ -76,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "## B and pre_B"
@@ -106,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "Note that you can manually suppress B elements beyond 10 but it doesn't help."
@@ -156,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "source": [
     "## logB"
@@ -232,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +246,7 @@
     "        L = brs[k].L_history[i-1][m]\n",
     "        L_diag = brs[k].L_diag_history[i-1][m]\n",
     "        mu = brs[k].mu_history[i-1][m]\n",
-    "        x = brs[k].obs_ds.get_history()[0][i + 30]\n",
+    "        x = brs[k].input_ds.get_history()[0][i + 30]\n",
     "        B[k].append(single_logB(x, mu, L, L_diag))\n",
     "B = np.array(B)"
    ]
@@ -264,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "## mu"
@@ -286,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +288,7 @@
     "L = brs[k].L_history[i-1][m]\n",
     "L_diag = brs[k].L_diag_history[i-1][m]\n",
     "mu = brs[k].mu_history[i-1][m]\n",
-    "x = brs[k].obs_ds.get_history()[0][i + 30]\n",
+    "x = brs[k].input_ds.get_history()[0][i + 30]\n",
     "\n",
     "logB = single_logB(x, mu, L, L_diag)\n",
     "assert np.allclose(brs[k].pre_B_history[i-1,m], logB)\n",
@@ -308,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +310,7 @@
     "L = brs[k].L_history[i-1][m]\n",
     "L_diag = brs[k].L_diag_history[i-1][m]\n",
     "mu = brs[k].mu_history[i-1][m]\n",
-    "x = brs[k].obs_ds.get_history()[0][i + 30]\n",
+    "x = brs[k].input_ds.get_history()[0][i + 30]\n",
     "\n",
     "logB = single_logB(x, mu, L, L_diag)\n",
     "assert np.allclose(brs[k].pre_B_history[i-1,m], logB)\n",
@@ -330,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +335,7 @@
     "\n",
     "\n",
     "i = 255\n",
-    "x = brs[k].obs_ds.get_history()[0][i + 30]\n",
+    "x = brs[k].input_ds.get_history()[0][i + 30]\n",
     "\n",
     "n = mu.shape[0]\n",
     "logB = (-1 / 2) * np.linalg.norm((x - mu) @ L) ** 2 - (n / 2) * np.log(2 * np.pi) + np.sum(L_diag)\n",
@@ -355,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +358,7 @@
     "\n",
     "\n",
     "i = 255\n",
-    "x = brs[k].obs_ds.get_history()[0][i + 30]\n",
+    "x = brs[k].input_ds.get_history()[0][i + 30]\n",
     "L_diag = brs[k].L_diag_history[i-1][m]\n",
     "L = brs[k].L_history[i-1][m]\n",
     "# print(brs[k].mu_history[i-1][m] - mu)\n",
@@ -382,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "source": [
     "(460, 9.8)\n",
@@ -464,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,30 +527,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bubble = 5\n",
-    "brs[0].L_m_history[50,bubble,:,:]"
+    "k = 0\n",
+    "print(brs[k].bw.backend_note)\n",
+    "Q = brs[k].model_step_variable_history['Q'];\n",
+    "plt.plot(np.log(Q));"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in [0,1]:\n",
-    "    for m in range(brs[k].bw.N):\n",
-    "        assert np.all(brs[0].L_v_history[0,m,[0,0,1],[0,1,1]] == 0)\n",
-    "        assert np.all((np.std(brs[0].L_v_history[:,m,...], axis=0) > 0) == np.array([[False, False], [True, False]]))\n",
-    "\n",
-    "for k in [0,1]:\n",
-    "    for m in range(brs[k].bw.N):\n",
-    "        assert np.all(brs[0].L_m_history[0,m,[0,0,1],[0,1,1]] == 0)\n",
-    "        assert np.all((np.std(brs[0].L_m_history[:,m,...], axis=0) > 0) == np.array([[False, False], [True, False]]))"
+    "Q.shape"
    ]
   }
  ],
