--- a/scripts/debug jax/switch_runtimes.ipynb
+++ b/scripts/debug jax/switch_runtimes.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "%matplotlib inline\n",
     "# red_lines=[brs[0,0].obs_ds.t[switch_iteration]]\n",
-    "al.plotting_functions.compare_metrics(brs.flatten(), 1, red_lines=[brs[0,0].obs_ds.t[switch_iteration-brs[0,0].bw.M]])"
+    "al.plotting_functions.compare_metrics(brs.flatten(), 1, red_lines=[brs[0,0].input_ds.t[switch_iteration-brs[0,0].bw.M]])"
    ]
   },
   {
@@ -122,6 +122,30 @@
     "%matplotlib inline\n",
     "br = brs[1][1]\n",
     "dim = br.bw.mu.shape[1]\n",
+    "Q = br.model_step_variable_history['Q'];\n",
+    "plt.plot(np.log(Q));\n",
+    "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
+    "plt.title(f\"Q for '{br.bw.backend_note}'\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "### Later inspection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "br = brs[1][1]\n",
+    "dim = br.bw.mu.shape[1]\n",
     "\n",
     "plt.plot((br.L_history[:,3,*np.tril_indices(dim, k=0)]))\n",
     "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
@@ -132,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,11 +213,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "fig, axs = plt.subplots(nrows=3, layout=\"tight\", figsize=(10,5), sharex=True)\n",
     "\n",
     "bubble = 5\n",
@@ -215,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +294,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br.model_step_variable_history['Q']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
