makes 64-bit calculations default

--- a/scripts/debug jax/replicate_rios_thing.ipynb
+++ b/scripts/debug jax/replicate_rios_thing.ipynb
@@ -8,10 +8,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
+    "\n",
+    "\n",
+    "import jax\n",
+    "\n",
     "\n",
     "import scipy\n",
     "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append(\"/home/jgould/Documents/AdaptiveLatents/scripts/\")\n",
     "from main import main\n",
     "from proSVD import proSVD\n"
    ]
@@ -20,6 +25,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jax.config.update('jax_platform_name', 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(repr(jax.numpy.square(3)))\n",
+    "print(repr(jax.numpy.square(3).devices()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,21 +185,11 @@
     "    # define the (optional) method to regress the HMM state from `bw.alpha`\n",
     "    reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape)\n",
     "    # reg = NearestNeighborRegressor(input_d=bw.N, output_d=1, maxlen=600)\n",
-    "    class CustomAnimation(AnimationManager):\n",
-    "        n_rows = 1\n",
-    "        n_cols = 1\n",
-    "        figsize = (15,10)\n",
-    "        extension = \"mp4\"\n",
-    "        def custom_draw_frame(self, step, bw: Bubblewrap, br):\n",
-    "            historical_observations = br.obs_ds.get_history()\n",
-    "            bpf.show_bubbles_2d(self.ax[0,0], historical_observations, bw, alpha_coefficient=.5)\n",
-    "            self.ax[0,0].set_title(f\"Step {step}\")\n",
-    "        def frame_draw_condition(self, step_number, bw):\n",
-    "            return step_number % 500 == 0\n",
+    " \n",
     "    # am = CustomAnimation()\n",
     "    # define the object to coordinate all the other objects\n",
-    "    br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, show_tqdm=True)\n",
-    "    # run and save the output\n",
+    "    br = BWRun(bw=bw, in_ds=in_ds, out_ds=out_ds, behavior_regressor=reg, show_tqdm=True)\n",
+    "    # run and save the outp\n",
     "    br.run(limit=steps_to_run, save = True)\n",
     "    return br"
    ]
@@ -181,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,22 +219,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "br.behavior_error_history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt\n",
-    "bpf.compare_metrics(brs,1 )"
+    "X1, Y1 = loadFile('N_MC')\n",
+    "X2, Y2 = loadFile('W_MC')\n",
+    "\n",
+    "X = np.hstack([X1, X2])\n",
+    "Y = np.hstack([Y1, Y2])\n",
+    "\n",
+    "brs = []\n",
+    "decomp = reducePSVD(Y.T, 10)\n",
+    "\n",
+    "X = X[:,-decomp.shape[1]:]\n",
+    "br = main(decomp, X, nBubbles=200)\n",
+    "brs.append(br) \n",
+    "bpf.compare_metrics([br], 1)"
    ]
   }
  ],
