--- a/scripts/debug jax/switch_runtimes.ipynb
+++ b/scripts/debug jax/switch_runtimes.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "switch_iteration = 270\n",
+    "switch_iteration = 350\n",
     "subprocess.call([\"python\", \"run_partial_start.py\", \"gpu\", str(switch_iteration)])\n",
     "subprocess.call([\"python\", \"run_partial_start.py\", \"cpu\", str(switch_iteration)])\n",
     "\n",
@@ -59,10 +59,9 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "plt.plot(brs[0,1].entropy_history[1] - brs[-1,1].entropy_history[1])\n",
-    "plt.axvline(switch_iteration-brs[0,0].bw.M, color='red')\n",
-    "print(switch_iteration - brs[0,0].bw.M)\n",
-    "print(np.nonzero(brs[0,1].entropy_history[1] - brs[-1,1].entropy_history[1] > 0)[0][0])"
+    "plt.plot(brs[0,1].h.entropy[1] - brs[-1,1].h.entropy[1])\n",
+    "plt.axvline(switch_iteration-brs[0,0].bw.M, color='red');\n",
+    "# assert abs((switch_iteration - brs[0,0].bw.M) - (np.nonzero(brs[0,1].h.entropy[1] - brs[-1,1].h.entropy[1] > 0)[0][0])) < 5"
    ]
   },
   {
@@ -90,8 +89,8 @@
     "    m = bubble\n",
     "    for k in range(len(brs)):\n",
     "        ratios = []\n",
-    "        for i in range(brs[k].L_history.shape[0]):\n",
-    "            L = brs[k].L_history[i,m,...]\n",
+    "        for i in range(brs[k].h.L.shape[0]):\n",
+    "            L = brs[k].h.L[i,m,...]\n",
     "            _, s, _= np.linalg.svd(np.linalg.pinv(L.T@L))\n",
     "            ratios.append(s.max() / s.min())\n",
     "        ratios = np.log(ratios)\n",
@@ -120,37 +119,55 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "br = brs[1][1]\n",
-    "dim = br.bw.mu.shape[1]\n",
-    "Q = br.model_step_variable_history['Q'];\n",
-    "plt.plot(np.log(Q));\n",
-    "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
-    "plt.title(f\"Q for '{br.bw.backend_note}'\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8",
-   "metadata": {},
-   "source": [
-    "### Later inspection"
+    "\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=brs.shape[0], figsize=(10,5), layout='tight', sharey=True, sharex=True);\n",
+    "for i in range(brs.shape[0]):\n",
+    "    for j in range(brs.shape[1]):\n",
+    "        br = brs[i][j]\n",
+    "        Q = br.h.Q;\n",
+    "\n",
+    "        alive_at_end = br.h.n_obs[-1] > 5;\n",
+    "        Q = Q[:, alive_at_end]\n",
+    "        log_Q = np.log(np.abs(Q));\n",
+    "        axs[j,i].plot(Q);\n",
+    "\n",
+    "        axs[j,i].axvline(switch_iteration - brs[0,0].bw.M, color='k', linestyle='--', alpha=.25 if i==0 else 1)\n",
+    "        axs[j,i].set_title(f\"Q for '{br.bw.backend_note}'\");\n",
+    "        axs[j,i].set_ylim([-500,500]);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "br = brs[1][1]\n",
-    "dim = br.bw.mu.shape[1]\n",
     "\n",
-    "plt.plot((br.L_history[:,3,*np.tril_indices(dim, k=0)]))\n",
-    "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
-    "# plt.ylim([0,900])\n",
-    "plt.title(f\"L for '{br.bw.backend_note}'\");"
+    "bubble = 2\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=brs.shape[0], figsize=(10,5), layout='tight', sharey=True, sharex=True);\n",
+    "for i in range(brs.shape[0]):\n",
+    "    for j in range(brs.shape[1]):\n",
+    "        br = brs[i][j]\n",
+    "        \n",
+    "        axs[j,i].plot(br.h.L_diag_grad[:, bubble, :]);\n",
+    "        axs[j,i].plot(br.h.L_lower_grad[:, bubble, *np.tril_indices(2, k=-1)]);\n",
+    "\n",
+    "\n",
+    "        axs[j,i].axvline(switch_iteration - brs[0,0].bw.M, color='k', linestyle='--', alpha=.25 if i==0 else 1)\n",
+    "        axs[j,i].set_title(f\"'{br.bw.backend_note}' whole L_grad {bubble} \");\n",
+    "        # axs[j,i].set_ylim([-.1,3])\n",
+    "        axs[j,i].set_ylim([-100,100])\n",
+    "    axs[1,2].legend(['L_diag_0', 'L_diag_1', 'L_lower'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "### Later inspection"
    ]
   },
   {
@@ -161,11 +178,13 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "br = brs[1][1]\n",
+    "dim = br.bw.mu.shape[1]\n",
     "\n",
-    "\n",
-    "plt.plot((br.L_lower_history[:,5,*np.tril_indices(dim, k=-1)]))\n",
+    "plt.plot((br.h.L[:,3,*np.tril_indices(dim, k=0)]))\n",
     "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
-    "plt.title(f\"L_lower for '{br.bw.backend_note}'\");"
+    "# plt.ylim([0,900])\n",
+    "plt.title(f\"L for '{br.bw.backend_note}'\");"
    ]
   },
   {
@@ -176,12 +195,11 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "dim = br.bw.mu.shape[1]\n",
     "\n",
-    "bubble=4\n",
-    "plt.plot((br.L_diag_history[:,bubble,...]))\n",
+    "\n",
+    "plt.plot((br.h.L_lower[:,5,*np.tril_indices(dim, k=-1)]))\n",
     "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
-    "plt.title(f\"L_diag for '{br.bw.backend_note}'\");"
+    "plt.title(f\"L_lower for '{br.bw.backend_note}'\");"
    ]
   },
   {
@@ -192,22 +210,12 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "fig, axs = plt.subplots(nrows=3, layout=\"tight\", figsize=(10,5), sharex=True)\n",
+    "dim = br.bw.mu.shape[1]\n",
     "\n",
-    "bubble = 5\n",
-    "axs[0].plot(br.L_diag_grad_history[:, bubble, :])\n",
-    "axs[0].set_ylim(np.array([-1,1])*200)\n",
-    "\n",
-    "axs[1].plot(br.L_diag_v_history[:, bubble, :])\n",
-    "axs[1].set_ylim(np.array([-1,1])*.01 + 0.005)\n",
-    "\n",
-    "\n",
-    "axs[2].plot(br.L_diag_m_history[:, bubble, :])\n",
-    "axs[2].set_ylim(np.array([-1,1])*1)\n",
-    "\n",
-    "\n",
-    "for i in range(3):\n",
-    "    axs[i].axvline(switch_iteration - brs[0,0].bw.M, color='k')\n"
+    "bubble=4\n",
+    "plt.plot((br.L_diag_history[:,bubble,...]))\n",
+    "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n",
+    "plt.title(f\"L_diag for '{br.bw.backend_note}'\");"
    ]
   },
   {
@@ -243,13 +251,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "br.L_diag_grad_history[switch_iteration - brs[0,0].bw.M -10, bubble, :]"
+    "%matplotlib inline\n",
+    "fig, axs = plt.subplots(nrows=3, layout=\"tight\", figsize=(10,5), sharex=True)\n",
+    "\n",
+    "bubble = 5\n",
+    "axs[0].plot(br.L_diag_grad_history[:, bubble, :])\n",
+    "axs[0].set_ylim(np.array([-1,1])*200)\n",
+    "\n",
+    "axs[1].plot(br.L_diag_v_history[:, bubble, :])\n",
+    "axs[1].set_ylim(np.array([-1,1])*.01 + 0.005)\n",
+    "\n",
+    "\n",
+    "axs[2].plot(br.L_diag_m_history[:, bubble, :])\n",
+    "axs[2].set_ylim(np.array([-1,1])*1)\n",
+    "\n",
+    "\n",
+    "for i in range(3):\n",
+    "    axs[i].axvline(switch_iteration - brs[0,0].bw.M, color='k')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br.L_diag_grad_history[switch_iteration - brs[0,0].bw.M -10, bubble, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +346,44 @@
     "plt.plot(np.log(np.abs(br.L_grad_history[:,5,...].reshape(-1,br.bw.mu.shape[1]**2))))\n",
     "# plt.ylim([-.01,.01])\n",
     "plt.axvline(switch_iteration - brs[0,0].bw.M, color='k')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = 1\n",
+    "sigma = 3\n",
+    "eps = rng.normal(size=100_000_000)\n",
+    "Y = mu + sigma*eps\n",
+    "\n",
+    "\n",
+    "# np.exp(Y).mean(), np.exp(mu + sigma**2/2)\n",
+    "np.exp(mu)*np.exp(sigma*eps).mean(), np.exp(mu + sigma**2/2)\n",
+    "np.exp(sigma*eps).mean(), np.exp(sigma**2/2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(eps**6).mean()"
    ]
   }
  ],
