isolates the gpu/cpu discrepancy to L_diag

--- a/scripts/debug jax/run_example.ipynb
+++ b/scripts/debug jax/run_example.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jax\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
+    "# jax.config.update(\"jax_enable_x64\", True)\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import adaptive_latents as al\n",
@@ -70,7 +69,7 @@
     "\n",
     "    log_Q = np.log(np.abs(br.h.Q))\n",
     "    axs[0,i].plot(log_Q)\n",
-    "    axs[0,i].set_title(f\"{backends[i]} Q\")\n",
+    "    axs[0,i].set_title(f\"{backends[i]} log |Q|\")\n",
     "    for j in range(0,4):\n",
     "        axs[j+1,i].plot(np.squeeze(br.h.Q_parts[:, j, :]))\n",
     "        axs[j+1,i].set_title(f\"{backends[i]} Q_{{{j}}}\")"
@@ -125,18 +124,32 @@
     "\n",
     "for br in brs:\n",
     "    entropies.append([])\n",
-    "    for i in np.arange(br.alpha_history[1].shape[0]):\n",
-    "        p = br.alpha_history[0][i] @ br.A_history[i]\n",
+    "    for i in np.arange(br.h.alpha_prediction[1].shape[0]):\n",
+    "        p = br.h.alpha_prediction[0][i] @ br.h.A[i]\n",
     "        entropies[-1].append(-(p @ np.log2(p)).mean())\n",
     "entropies = np.array(entropies)\n",
     "plt.plot(entropies.T)\n",
     "\n",
-    "first_divergence_index = np.nonzero(np.abs(np.diff(entropies, axis=0)) > 1)[1][0]"
+    "entropy_divergence = np.abs(np.diff(entropies, axis=0)) > 1\n",
+    "\n",
+    "first_divergence_index = entropy_divergence.shape[1] - 1\n",
+    "if np.any(entropy_divergence):\n",
+    "    first_divergence_index = np.nonzero(entropy_divergence)[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nonzero(np.abs(np.diff(entropies,axis=0)) > .1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## B and pre_B"
@@ -145,15 +158,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# show how B is different in the cpu vs gpu runs \n",
     "%matplotlib inline\n",
     "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True, figsize=(12,3), layout='tight');\n",
-    "ax[0].imshow(brs[0].B_history, interpolation='none', aspect='auto', vmin=0, vmax=1);\n",
-    "img = ax[1].imshow(brs[1].B_history, interpolation='none', aspect='auto', vmin=0, vmax=1);\n",
+    "ax[0].imshow(brs[0].h.B, interpolation='none', aspect='auto', vmin=0, vmax=1);\n",
+    "img = ax[1].imshow(brs[1].h.B, interpolation='none', aspect='auto', vmin=0, vmax=1);\n",
     "fig.colorbar(img)\n",
     "\n",
     "ax[0].set_ylabel(\"timestep\");\n",
@@ -164,50 +177,32 @@
     "ax[1].set_title(\"cpu B history\");\n",
     "\n",
     "\n",
-    "ax[0].set_ylim([270,200]);"
+    "# ax[0].set_ylim([270,200]);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
     "# compare the pre-exp B to real B on the GPU\n",
     "%matplotlib inline\n",
     "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True, figsize=(12,3));\n",
-    "ax[0].imshow(brs[0].B_history, interpolation='none', aspect='auto');\n",
-    "ax[1].imshow(brs[0].pre_B_history, interpolation='none', aspect='auto', vmin = -12.5e3);\n",
-    "ax[0].set_ylim([260,150]);\n",
+    "ax[0].imshow(brs[0].h.B, interpolation='none', aspect='auto');\n",
+    "ax[1].imshow(brs[0].h.pre_B, interpolation='none', aspect='auto', vmin = -12.5e3);\n",
+    "# ax[0].set_ylim([260,150]);\n",
     "ax[0].set_title(\"GPU B\")\n",
     "ax[1].set_title(\"GPU pre_B\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Note that you can manually suppress B elements beyond 10 but it doesn't help."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compare pre_B on gpu and cpu\n",
-    "%matplotlib inline\n",
-    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True, figsize=(12,3));\n",
-    "img = ax[0].imshow(brs[0].pre_B_history, interpolation='none', aspect='auto', vmin = -12.5e3);\n",
-    "img = ax[1].imshow(brs[1].pre_B_history, interpolation='none', aspect='auto', vmin = -12.5e3);\n",
-    "fig.colorbar(img);\n",
-    "ax[0].set_ylim([260,150]);\n",
-    "ax[0].set_title(\"GPU pre_B\")\n",
-    "ax[1].set_title(\"CPU pre_B\");"
    ]
   },
   {
@@ -217,22 +212,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show the transition from a \"good\" B to a \"bad\" B \n",
+    "# compare pre_B on gpu and cpu\n",
     "%matplotlib inline\n",
-    "fig, ax = plt.subplots(nrows=2, figsize=(5,10), sharex=True)\n",
-    "k = 0\n",
-    "i = 255\n",
-    "\n",
-    "\n",
-    "ax[0].plot(brs[k].pre_B_history[(i-1)-1])\n",
-    "ax[0].plot(brs[k].pre_B_history[(i)-1])\n",
-    "ax[0].set_title(f\"{backends[k]} Pre_B's\")\n",
-    "ax[0].set_ylim([0,10])\n",
-    "\n",
-    "ax[1].plot(brs[k].B_history[i-1], label=\"t=254\")\n",
-    "ax[1].plot(brs[k].B_history[i], label=\"t=255\")\n",
-    "ax[1].set_title(f\"{backends[k]} B's\")\n",
-    "ax[1].legend();"
+    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True, figsize=(12,3));\n",
+    "img = ax[0].imshow(brs[0].h.pre_B, interpolation='none', aspect='auto' );\n",
+    "img = ax[1].imshow(brs[1].h.pre_B, interpolation='none', aspect='auto');\n",
+    "fig.colorbar(img);\n",
+    "# ax[0].set_ylim([260,150]);\n",
+    "ax[0].set_title(\"GPU pre_B\")\n",
+    "ax[1].set_title(\"CPU pre_B\");"
    ]
   },
   {
@@ -242,17 +230,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# show the transition from a \"good\" B to a \"bad\" B \n",
+    "%matplotlib inline\n",
+    "fig, ax = plt.subplots(nrows=2, figsize=(5,10), sharex=True)\n",
+    "k = 0\n",
+    "i = 16\n",
+    "\n",
+    "\n",
+    "ax[0].plot(brs[k].h.pre_B[(i-1)-1])\n",
+    "ax[0].plot(brs[k].h.pre_B[(i)-1])\n",
+    "ax[0].set_title(f\"{backends[k]} Pre_B's\")\n",
+    "# ax[0].set_ylim([0,10])\n",
+    "\n",
+    "ax[1].plot(brs[k].h.B[i-1], label=f\"t={i-1}\")\n",
+    "ax[1].plot(brs[k].h.B[i], label=f\"t={i}\")\n",
+    "ax[1].set_title(f\"{backends[k]} B's\")\n",
+    "ax[1].legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# check that the normalization or b_exp didn't cause the issue\n",
     "%matplotlib inline\n",
-    "i=255\n",
+    "i=10\n",
     "k = 0\n",
-    "B = np.array(brs[k].pre_B_history[i-1])\n",
+    "B = np.array(brs[k].h.pre_B[i-1])\n",
     "print(f\"{np.argmax(B)}: {B.max()}\")\n",
     "B -= B.max()\n",
     "B = np.exp(B)\n",
     "plt.plot(B, label=backends[k])\n",
     "\n",
-    "B = np.array(brs[1-k].pre_B_history[i-1])\n",
+    "B = np.array(brs[1-k].h.pre_B[i-1])\n",
     "print(f\"{np.argmax(B)}: {B.max()}\")\n",
     "B -= B.max()\n",
     "B = np.exp(B)\n",
@@ -262,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "## logB"
@@ -271,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "## mu"
@@ -325,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "(460, 9.8)\n",
@@ -503,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,18 +538,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots()\n",
-    "i=50\n",
     "\n",
-    "m = 5\n",
+    "m = 0\n",
     "for k in [0,1]:\n",
     "    ratios = []\n",
-    "    for i in range(brs[k].L_history.shape[0]):\n",
-    "        L = brs[k].L_history[i,m,...]\n",
+    "    for i in range(brs[k].h.L.shape[0]):\n",
+    "        L = brs[k].h.L[i,m,...]\n",
     "        _, s, _= np.linalg.svd(np.linalg.pinv(L.T@L))\n",
     "        ratios.append(s.max() / s.min())\n",
     "    ratios = np.log(ratios)\n",
@@ -552,19 +564,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = 0\n",
-    "m=1\n",
-    "plt.plot(np.log(np.abs(np.diff(brs[k].L_history[:, m, ...], axis=0))).reshape([-1,4]));"
+    "def ar_from_L(L):\n",
+    "    _, s, _= np.linalg.svd(np.linalg.pinv(L.T@L))\n",
+    "    return s.max() / s.min()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = 0\n",
+    "i = 3\n",
+    "L1 = brs[k].h.L[i,m,...]\n",
+    "L2 = brs[k].h.L[i+1,m,...] \n",
+    "(L2-L1)[np.tril_indices_from(L1)]\n",
+    "np.log(ar_from_L(L1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 0\n",
+    "m=1\n",
+    "plt.plot(np.log(np.abs(np.diff(brs[k].h.L[:, m, ...], axis=0))).reshape([-1,4]));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,16 +623,6 @@
     "print(brs[k].bw.backend_note)\n",
     "Q = brs[k].model_step_variable_history['Q'];\n",
     "plt.plot(np.log(Q));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Q.shape"
    ]
   }
  ],
